--- a/CoachingBusiness/Pages/Register.cshtml
+++ b/CoachingBusiness/Pages/Register.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Register</h1>
 <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-    <div asp-validation-summary="All"</div>
+    <div asp-validation-summary="All"></div>
     <div>
         <label asp-for="Input.Email"></label>
         <input asp-for="Input.Email"/>
